[package]
edition = "2021"
name = "iced_window"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced_native = "0.9.1"
# iced_style = "0.7.0"
# iced_graphics = "0.7.0"
# iced_wgpu = "0.9.0"
iced_graphics = {path = "../iced/graphics"}
iced_native = {path = "../iced/native"}
iced_style = {path = "../iced/style"}
iced_wgpu = {path = "../iced/wgpu"}

[workspace]
members = [
  "examples/*",
]
resolver = "2"
