[package]
edition = "2021"
name = "show_menu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_window = {path = "../../"}
# iced_native = "0.9.1"
iced_native = {path = "../../../iced/native"}

[dependencies.iced]
features = ["tokio", "debug", "image", "svg"]
# version = "0.8.0"
path = "../../../iced"
